src/main/metadata/objects/Insights_Response__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customers</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insights Responses</relationshipLabel>
        <relationshipName>Insights_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insight_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup to Insights question record</description>
        <inlineHelpText>Lookup to Insights question record</inlineHelpText>
        <label>Insight Question</label>
        <referenceTo>Insights_Question__c</referenceTo>
        <relationshipLabel>Insights Responses</relationshipLabel>
        <relationshipName>Insights_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Insights_Answer_Value__c</fullName>
		<description>Actual value provided by user</description>
        <inlineHelpText>Actual value provided by user</inlineHelpText>
        <label>Insights Answer Value</label>
		<length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insights_Response_Id__c</fullName>
        <displayFormat>INR-{000000}</displayFormat>
		<description>SFDC ID</description>
        <inlineHelpText>SFDC ID</inlineHelpText>
        <label>Insights Response Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ',
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY', 
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR',
IF(ISPICKVAL($User.Market__c, 'TR'), 'TR','')))))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup to the vehicle Customer is responding for</description>
        <label>Vehicle ID</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Insights Responses</relationshipLabel>
        <relationshipName>Insights_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Relationship_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
		<description>lookup to VR that links Vehicle and Customer</description>
        <label>Vehicle Relationship ID</label>
        <referenceTo>Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Insights Responses</relationshipLabel>
        <relationshipName>Insights_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insights Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insights Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>